--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /conferenceFXWeb/tmp
 /conferenceFXWeb/conferenceFXWeb.iml
 /conferenceFXWeb/RUNNING_PID
+/conferenceFX/.idea
+/conferenceFX/target
+/ConferenceMobile/.idea
